--- a/tracks.yaml
+++ b/tracks.yaml
@@ -115,7 +115,7 @@ tracks:
     name: lanelet2
     patches: null
     release_inc: '1'
-    release_repo_url: null
+    release_repo_url: git@github.com:revyos-ros/lanelet2-release.git
     release_tag: :{version}
     ros_distro: humble
     vcs_type: git
