--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = c61369fd
+	base = 35db8e95
 	trim = lanelet2
-	trimbase = 
+	trimbase = c61369fd
