--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = 66d6fdf2
+	base = d7c0fa9f
 	trim = lanelet2_core
-	trimbase = 
+	trimbase = 66d6fdf2
