--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = f7d2ae8b
+	base = 8a646b8c
 	trim = lanelet2_examples
-	trimbase = 
+	trimbase = f7d2ae8b
