--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = 9a321baa
+	base = e7f99313
 	trim = lanelet2_io
-	trimbase = 
+	trimbase = 9a321baa
