--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = 7d2883a4
+	base = 08a9bb5a
 	trim = lanelet2_maps
-	trimbase = 
+	trimbase = 7d2883a4
