--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = 207b72c8
+	base = 9bfbc372
 	trim = lanelet2_matching
-	trimbase = 
+	trimbase = 207b72c8
