--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = 8f76e67a
+	base = 861e3226
 	trim = lanelet2_projection
-	trimbase = 
+	trimbase = 8f76e67a
