--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = 1858d333
+	base = bfd3eae2
 	trim = lanelet2_python
-	trimbase = 
+	trimbase = 1858d333
