--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = 7669878b
+	base = 63cb1b56
 	trim = lanelet2_routing
-	trimbase = 
+	trimbase = 7669878b
