--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = cf2bcf74
+	base = a22d1c1a
 	trim = lanelet2_traffic_rules
-	trimbase = 
+	trimbase = cf2bcf74
