--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c792a626
-	base = 1400e70b
+	base = 57ef3101
 	trim = lanelet2_validation
-	trimbase = 
+	trimbase = 1400e70b
