--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_examples
-	previous = 
-	base = b3930d3e
+	previous = b3930d3e
+	base = 70e349a3
 	trim = 
 	trimbase = 
