--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_maps
-	previous = 
-	base = 8fb86f63
+	previous = 8fb86f63
+	base = 78afe75c
 	trim = 
 	trimbase = 
