--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_validation
-	previous = 
-	base = 3c52c0f6
+	previous = 3c52c0f6
+	base = 6b3d61f5
 	trim = 
 	trimbase = 
