--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_io
-	previous = 
-	base = 5cb01193
+	previous = 5cb01193
+	base = 415ec47b
 	trim = 
 	trimbase = 
