--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_projection
-	previous = 
-	base = bf2ba5f4
+	previous = bf2ba5f4
+	base = c2b085da
 	trim = 
 	trimbase = 
