--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_core
-	previous = 
-	base = dd96d14a
+	previous = dd96d14a
+	base = 57ea0f18
 	trim = 
 	trimbase = 
