--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_python
-	previous = 
-	base = 445660a3
+	previous = 445660a3
+	base = 0eef5745
 	trim = 
 	trimbase = 
