--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_matching
-	previous = 
-	base = fbc9b8fb
+	previous = fbc9b8fb
+	base = 47506922
 	trim = 
 	trimbase = 
