--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_traffic_rules
-	previous = 
-	base = 7126a495
+	previous = 7126a495
+	base = 64b86837
 	trim = 
 	trimbase = 
