--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2_routing
-	previous = 
-	base = 849da60d
+	previous = 849da60d
+	base = 37da7cdc
 	trim = 
 	trimbase = 
