--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/lanelet2
-	previous = 
-	base = 52104f4e
+	previous = 52104f4e
+	base = e6da3dab
 	trim = 
 	trimbase = 
