--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = 47f7ccb3
+	base = 824cabe2
 	trim = lanelet2
-	trimbase = 
+	trimbase = 47f7ccb3
