--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = 27d32d96
+	base = cc352255
 	trim = lanelet2_core
-	trimbase = 
+	trimbase = 27d32d96
