--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = 7cfbe707
+	base = d4600613
 	trim = lanelet2_examples
-	trimbase = 
+	trimbase = 7cfbe707
