--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = 811b8920
+	base = 7c27930f
 	trim = lanelet2_io
-	trimbase = 
+	trimbase = 811b8920
