--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = bf381251
+	base = cc803e53
 	trim = lanelet2_maps
-	trimbase = 
+	trimbase = bf381251
