--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = c2b152a7
+	base = 99be9100
 	trim = lanelet2_matching
-	trimbase = 
+	trimbase = c2b152a7
