--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = dab9a50d
+	base = d8dc358c
 	trim = lanelet2_projection
-	trimbase = 
+	trimbase = dab9a50d
