--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = ad184b5f
+	base = d8996f40
 	trim = lanelet2_python
-	trimbase = 
+	trimbase = ad184b5f
