--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = 68756db2
+	base = 996676d9
 	trim = lanelet2_routing
-	trimbase = 
+	trimbase = 68756db2
