--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = 67f20fe8
+	base = 6a17071e
 	trim = lanelet2_traffic_rules
-	trimbase = 
+	trimbase = 67f20fe8
