--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed76762c
-	base = 4b08d9c3
+	base = fba4d199
 	trim = lanelet2_validation
-	trimbase = 
+	trimbase = 4b08d9c3
